<resources>
    <string name="app_name">AnOtterRedditApp</string>
    <string name="login">Login</string>
    <string name="fetch_feed">Fetch feed</string>
    <!--fragments-->
    <string name="home_fragment">home fragment</string>
    <string name="search_fragment">search fragment</string>
    <string name="edit_fragment">edit fragment</string>
    <string name="msg_fragment">notification fragment</string>
    <string name="otter_fragment">otter fragment</string>
    <string name="profile_user_name">my username</string>
    <string name="profile_fragment">profile fragment</string>


    <string name="app_logo">App logo</string>
    <string name="search_icon">Search icon</string>
    <string name="autofill_hint">subreddit or post</string>
    <string name="post_body_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="post_title">What is Lorem Ipsum?</string>
    <string name="endpoint_user_author">u/redditdev</string>
    <string name="r_subreddit">r_subreddit</string>
    <string name="imageUrl">Thumbnail</string>
    <string name="comment">comments</string>
    <string name="share">share</string>
    <string name="my_infos">my info</string>
    <string name="my_subscriptions">my subscriptions</string>

    <string name="login_state_icon">login state icon</string>

    <!--    Menu-->
    <string name="search">search</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="edit">edit</string>
    <string name="otter">otter</string>
    <string name="reply">reply</string>
    <string name="up_icon">up icon</string>
    <string name="down_icon">down icon</string>
    <string name="reply_icon">reply icon</string>
    <string name="share_icon">share icon</string>
    <string name="extended_floating_action_button">Extended floating action button</string>
    <string name="www_something_yeah">www.something.yeah</string>
    <string name="login_btn_text">Sign in or sign up</string>
    <string name="username">Username</string>
    <string name="subscribers">subscribers</string>
    <string name="android">Android</string>
    <string name="random_number">15688446</string>
    <string name="subreddit_icon">subreddit_icon</string>
    <string name="favorite_icon">favorite_icon</string>
    <string name="_7h">7h</string>
    <string name="up_arrow">up arrow</string>
    <string name="_22">22</string>
    <string name="down_arrow">down arrow</string>
    <string name="comment_icon">comment icon</string>
    <string name="_127">127</string>
    <string name="login_state">Login state</string>
    <string name="lilee">Lilee</string>
    <string name="sign_in_or_sign_up">Sign in or Sign up</string>
    <string name="refresh">refresh</string>
    <string name="connection">Connection</string>
    <string name="connected">Internet Connected</string>
    <string name="no_connected">Internet Not Connected</string>
    <string name="save">Save</string>

</resources>
