<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/text_box"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/post_title_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/post_title"
        android:maxLines="3"
        android:padding="8dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_body_ipsum"
        android:minLines="3"
        android:maxLines="3"
        android:padding="8dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/www_something_yeah"
        android:textColor="@color/colorPrimary"
         />
</LinearLayout>