<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <ImageView
        android:id="@+id/up_arrow"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_up_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/post_vote_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_vote_num"
        android:contentDescription="@string/up_icon" />

    <TextView
        android:id="@+id/post_vote_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="22"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/commentsNum"
        app:layout_constraintStart_toEndOf="@+id/up_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/down_arrow"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/post_vote_num"
        app:layout_constraintStart_toEndOf="@+id/post_vote_num"
        app:layout_constraintTop_toTopOf="@+id/post_vote_num"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/down_icon" />

    <ImageView
        android:id="@+id/comment_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_reply"
        app:layout_constraintBottom_toBottomOf="@+id/commentsNum"
        app:layout_constraintEnd_toStartOf="@+id/commentsNum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/down_arrow"
        app:layout_constraintTop_toTopOf="@+id/commentsNum"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/reply_icon" />

    <TextView
        android:id="@+id/commentsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reply"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/share_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <ImageView
        android:id="@+id/share_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/commentsNum"
        app:layout_constraintTop_toTopOf="@+id/share"
        app:layout_constraintVertical_bias="0.25"
        android:contentDescription="@string/share_icon" />

    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/share"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>