<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/subreddit_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mug"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/subreddit_icon" />

        <TextView
            android:id="@+id/subreddit_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/android"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/subreddit_icon" />


        <TextView
            android:id="@+id/subreddit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subreddit_name" />

        <ImageButton
            android:id="@+id/fav_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/white_rounded_btn"
            android:padding="8dp"
            android:src="@drawable/ic_favorite_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/subreddit_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75"
            android:contentDescription="@string/favorite_icon" />

        <TextView
            android:id="@+id/subscribers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/subscribers"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/subreddit_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subscribers_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/random_number"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/subscribers_label"
            app:layout_constraintTop_toTopOf="@+id/subscribers_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>